--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden;  
+  scroll-behavior: smooth;
 
 }
 
