--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100%;
-  overflow-x: hidden;  
+  overflow-x: hidden;
   scroll-behavior: smooth;
-
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "TitleFont";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("TitleFont"), url(./Assets/Audrey-Normal.otf) format("opentype");
+}
+@font-face {
+  font-family: "TitleFontBold";
+  src: local("TitleFontBold"), url(./Assets/Audrey-Bold.otf) format("opentype");
 }
